// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`write_parallel.sql > line 8 1`] = `
[
  "set parallel_setup_cost=0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 24,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "parallel_setup_cost",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 17 1`] = `
[
  "explain (costs off) create table parallel_write as
    select length(stringu1) from tenk1 group by length(stringu1)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 33,
                    "relname": "parallel_write",
                    "relpersistence": "p",
                  },
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "SelectStmt": {
                    "fromClause": [
                      {
                        "RangeVar": {
                          "inh": true,
                          "location": 84,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                    ],
                    "groupClause": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "stringu1",
                                    },
                                  },
                                ],
                                "location": 106,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 99,
                        },
                      },
                    ],
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 62,
                          "val": {
                            "FuncCall": {
                              "args": [
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "stringu1",
                                        },
                                      },
                                    ],
                                    "location": 69,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "length",
                                  },
                                },
                              ],
                              "location": 62,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 20 1`] = `
[
  "    select length(stringu1) from tenk1 group by length(stringu1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 33,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "stringu1",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "length",
                      },
                    },
                  ],
                  "location": 48,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "stringu1",
                                },
                              },
                            ],
                            "location": 18,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "length",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 23 1`] = `
[
  "explain (costs off) select length(stringu1) into parallel_write
    from tenk1 group by length(stringu1)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 73,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "groupClause": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "stringu1",
                                },
                              },
                            ],
                            "location": 95,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "length",
                          },
                        },
                      ],
                      "location": 88,
                    },
                  },
                ],
                "intoClause": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 49,
                    "relname": "parallel_write",
                    "relpersistence": "p",
                  },
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "stringu1",
                                    },
                                  },
                                ],
                                "location": 34,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 29 1`] = `
[
  "explain (costs off) create materialized view parallel_mat_view as
    select length(stringu1) from tenk1 group by length(stringu1)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 45,
                    "relname": "parallel_mat_view",
                    "relpersistence": "p",
                  },
                },
                "objtype": "OBJECT_MATVIEW",
                "query": {
                  "SelectStmt": {
                    "fromClause": [
                      {
                        "RangeVar": {
                          "inh": true,
                          "location": 99,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                    ],
                    "groupClause": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "stringu1",
                                    },
                                  },
                                ],
                                "location": 121,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 114,
                        },
                      },
                    ],
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 77,
                          "val": {
                            "FuncCall": {
                              "args": [
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "stringu1",
                                        },
                                      },
                                    ],
                                    "location": 84,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "length",
                                  },
                                },
                              ],
                              "location": 77,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 38 1`] = `
[
  "prepare prep_stmt as select length(stringu1) from tenk1 group by length(stringu1)",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "prep_stmt",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 50,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "groupClause": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "stringu1",
                                },
                              },
                            ],
                            "location": 72,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "length",
                          },
                        },
                      ],
                      "location": 65,
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "stringu1",
                                    },
                                  },
                                ],
                                "location": 35,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "length",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`write_parallel.sql > line 43 1`] = `
[
  "rollback",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
